--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "Thanks for using"
   },
   "keywords": [],
-  "author": "Supreme#2401",
+  "author": "Atreya#2401",
   "license": "Apache License 2.0",
   "dependencies": {
     "ascii-table": "0.0.9",
